Changed it so they are separate

--- a/week01/index.css
+++ b/week01/index.css
@@ -1,7 +1,10 @@
 body{
     font-family: monospace;
-    color: white;
+    color:black;
 }
 html{
-    background-color: indigo;
+    background-color: white;
+}
+h1{
+    
 }
