--- a/week01/index.css
+++ b/week01/index.css
@@ -1,10 +1,11 @@
 body{
     font-family: monospace;
-    color:black;
+    color: indigo
+    ;
 }
 html{
-    background-color: white;
+    background-color: orangered;
 }
 h1{
-    
+
 }
