--- a/week01/index.css
+++ b/week01/index.css
@@ -1,10 +1,10 @@
 body{
     font-family: monospace;
-    color: indigo
-    ;
+    color:orangered;
+    
 }
 html{
-    background-color: orangered;
+    background-color: indigo;
 }
 h1{
 
