Fixed image issue

--- a/week03/styles.css
+++ b/week03/styles.css
@@ -5,7 +5,7 @@ body{
     color: black;
     line-height: 140% (em 1.4);
     margin: 30px;
-    background-image: url("page-bg.gif");
+    background-image: url("images/page-bg.gif");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-color: #f7f3de;
