--- a/week03/styles.css
+++ b/week03/styles.css
@@ -10,3 +10,13 @@ body{
     background-attachment: fixed;
     background-color: #f7f3de;
 }
+
+h1{
+    font-size: 350%;
+    color: #7c1a00;
+    padding: 40px;
+    padding-left: 120px;
+    background-image: url("./images/header-image-1.gif");
+    background-position: top left;
+    background-repeat: no-repeat;
+}
